@@ -170,6 +170,7 @@ The
 page lists recently seen honkers that are not otherwise tracked.
 It also allows the import of external objects via URL, either individual
 posts or actor URLs, in which case their recent outbox is imported.
+Probably easier to use the search box for this.
 .Ss Account
 It's all about you.
 An avatar may be selected from the
