@@ -4,7 +4,7 @@
 <form action="/ximport" method="POST">
 <input type="hidden" name="CSRF" value="{{ .XCSRF }}">
 <p><span class="title">import</span>
-<p><input tabindex=1 type="text" name="xid" autocomplete=off> - xid
+<p><input tabindex=1 type="text" name="q" autocomplete=off> - xid
 <p><button tabindex=1 name="fetch" value="fetch">fetch</button>
 </form>
 </div>
